# mcp-for-retriever

./: .env.auth  .env.basic  .env.complete  .env.example  .gitignore  COMMIT_SUMMARY.md  Dockerfile  Dockerfile.auth  Dockerfile.mcp  LICENSE  README.md  completed_architecture.md  debug_fastmcp_internals.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  refactoring.md  start_servers.sh  test_accept_headers.py  test_e2e_debug.py  test_fastmcp_client_direct.py  test_fine_grained_permissions_e2e.py  test_gateway_simple.py  test_mcp_initialize.py  test_mcp_simple.py  test_mcp_skip_initialized.py  test_sse_complete.py
docker/: Dockerfile.mcp
docs/: CLEANUP_SUMMARY.md  E2E_TEST_IMPLEMENTATION.md  E2E_TEST_RESULTS.md  GATEWAY_INTEGRATION_TEST.md  SERVER_MIGRATION_NOTICE.md  SSE_PROXY_IMPLEMENTATION.md  annotation-examples.md  annotation-plan.md  annotation-priority.md  api-reference.md  deployment-guide.md  implementation-design.md  migration-guide.md  progress-summary.md  refactoring-plan.md  security-analysis.md  server-structure-after-refactoring.md
docs/structure/: README.md  auth.md  cache.md  middleware.md  observability.md  retrievers.md  server.md  src.md  tests.md
k8s/: ingress.yaml  qdrant.yaml  redis.yaml
next_delete/: docker-compose.yml  nginx.conf
next_delete/k8s/: mcp-server.yaml  namespace.yaml  postgres.yaml
next_delete/old/: README.md  server_complete_original.py
reference_docs/: architecture.md  fastmcp-llms-full.txt  googleapis-genai-toolbox.txt  security_performance_monitoring.md
scripts/: README.md  check_users.py  create_test_users.py  init_permissions.sql  logs-docker.sh  quick-start.sh  run-e2e-tests.sh  run-integration-tests.sh  run-playwright-tests.sh  run-unified-server.sh  start-docker.sh  stop-docker.sh  test-auth-integration.sh  test-local.sh  test-phase2.sh  test-services.sh
scripts/db-init/: init_auth_db.py  init_permissions.sql
scripts/debug/: debug_mcp_requests.py
src/: __main__.py  exceptions.py  server.py  server_test_adapter.py  server_unified.py
src/auth/: __init__.py  components.py  database.py  dependencies.py  init_admin.py  jwt_manager.py  models.py  request_models.py  server.py  translations.py  verifiers.py
src/cache/: __init__.py  redis_cache.py
tests/: README.md  conftest.py  test_fasthtml_render.py
(+146 files in other folders)
